<!--generated in de.wwu.md2.framework.generator.android.lollipop.view.Layout.generateStartLayout()-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="md2.investigation.StartActivity">

    <de.wwu.md2.android.md2library.view.widgets.implementation.Md2FlowLayoutPane
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.wwu.md2.android.md2library.view.widgets.implementation.Md2Button
            android:id="@id/startActivity_AccelerometerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/Accelerometer_alias" />

        <de.wwu.md2.android.md2library.view.widgets.implementation.Md2Button
            android:id="@id/startActivity_ContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/Contact_alias" />

        <de.wwu.md2.android.md2library.view.widgets.implementation.Md2Button
            android:id="@id/startActivity_DatabaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/Database_alias" />

        <de.wwu.md2.android.md2library.view.widgets.implementation.Md2Button
            android:id="@id/startActivity_FileSystemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/FileSystem_alias" />

        <de.wwu.md2.android.md2library.view.widgets.implementation.Md2Button
            android:id="@id/startActivity_GeolocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:text="@string/Geolocation_alias" />
    </de.wwu.md2.android.md2library.view.widgets.implementation.Md2FlowLayoutPane>
</ScrollView>